Finished Global Page.

--- a/about_us.html
+++ b/about_us.html
@@ -20,13 +20,13 @@
 
                 <ul class="navbar-block__links">
                     <li class="navbar-block__item">
-                        <a href="about_us.html" class="navbar-block__link  light-link">Global Home</a>
+                        <a href="index.html" class="navbar-block__link light-link">Global Home</a>
                     </li>
                     <li class="navbar-block__item">
-                        <a href="business.html" class="navbar-block__link  light-link">Business</a>
+                        <a href="business.html" class="navbar-block__link light-link">Business</a>
                     </li>
                     <li class="navbar-block__item">
-                        <a href="consumer.html" class="navbar-block__link  light-link">Consumer</a>
+                        <a href="consumer.html" class="navbar-block__link light-link">Consumer</a>
                     </li>
                     <li class="navbar-block__item">
                         <a href="#" class="navbar-block__button">
