--- a/index.html
+++ b/index.html
@@ -220,12 +220,47 @@
             <h4 class="warning-block__text">Warning regarding suspicious emails imitating public relations notificationfs from Capture</h4>
         </div>
     </main>
-    <footer class="globalFooter">
-        <div class="globalFooter__top">
-
+    <footer class="global-footer footer">
+        <div class="global-footer__top footer-top footer-block">
+            <ul class="footer-top__links footer-links">
+                <li class="footer-top__link footer-item">
+                    <a href="#" class="footer-top__link footer-link">News</a>
+                </li>
+                <li class="footer-top__link footer-item">
+                    <a href="#" class="footer-top__link footer-link">Updates</a>
+                </li>
+                <li class="footer-top__link footer-item">
+                    <a href="#" class="footer-top__link footer-link">RSS Feeds</a>
+                </li>
+                <li class="footer-top__link footer-item">
+                    <a href="#" class="footer-top__link footer-link">Social Media Accounts</a>
+                </li>
+            </ul>
         </div>
-        <div class="globalFooter__bottom">
+        <div class="global-footer__bottom footer-bottom footer-block">
+            <ul class="footer-bottom__links footer-links">
+                <li class="footer-bottom__item footer-item">
+                    <a href="#" class="footer-bottom__link footer-link">Contacts</a>
+                </li>
+                <li class="footer-bottom__item footer-item">
+                    <a href="#" class="footer-bottom__link footer-link">Privacy Management</a>
+                </li>
+                <li class="footer-bottom__item footer-item">
+                    <a href="#" class="footer-bottom__link footer-link">Website Privacy Notice</a>
+                </li>
+                <li class="footer-bottom__item footer-item">
+                    <a href="#" class="footer-bottom__link footer-link">Terms of Use</a>
+                </li>
+                <li class="footer-bottom__item footer-item">
+                    <a href="#" class="footer-bottom__link footer-link">Cookie Notice</a>
+                </li>
+            </ul>
 
+            <h6 class="footer-bottom__tag">© 2024 Capture Corporation</h6>
+
+            <a href="#" class="footer-bottom__arrow">
+                <img src="imgs/go_up_arrow.svg" alt="Go Up"/>
+            </a>
         </div>
     </footer>
 </body>
