Залишилось футер, блок Featured та доробити блок пошуку

--- a/business.html
+++ b/business.html
@@ -60,10 +60,10 @@
 
                     <div class="product__body">
                         <div class="product-line">
-                        <a class="product-line__category product-line__category--active" href="/">Search by product
-                            category</a>
-                        <a class="product-line__industry" href="/">Search by industry</a>
-                    </div>
+                            <a class="product-line__category product-line__category--active" href="/">Search by product
+                                category</a>
+                            <a class="product-line__industry" href="/">Search by industry</a>
+                        </div>
                         <div class="category">
                             <h2 class="category__title">Observation & Examination (Biology)</h2>
                             <ul class="category__list">
@@ -215,7 +215,7 @@
                             <ul class="category__list">
                                 <li class="category__item">
                                     <div class="card">
-                                        <img src="/imgs/business/pic_product_encoders.svg"
+                                        <img src="/imgs/business/pic_product_surveying_instruments.svg"
                                              alt="Surveying Instruments" class="card__photo">
                                         <h3 class="card__title">Surveying Instruments</h3>
                                     </div>
@@ -307,28 +307,21 @@
                         </div>
                     </div>
                 </li>
-
-
-                <!-- other content
-
-
-
-
-               -->
             </ul>
         </div>
     </div>
 
-    <div class="business-search">
-        <form class="search-keywords">
-            <label>
-                <input type="text" class="search-keywords__input">
-            </label>
-            <input type="submit" class="search-keywords__submit">
-        </form>
-    </div>
-
     <div class="info">
+        <div class="business-search">
+            <form class="search-keywords">
+                <label for="search-keywords" class="search-keywords__libel">
+                    Search keyword(s)
+                    <input type="text" id="search-keywords" class="search-keywords__input">
+                </label>
+                <input type="submit" class="search-keywords__submit">
+            </form>
+        </div>
+
         <div class="info__network">
             <h2 class="info__title"></h2>
             <p class="info__text"></p>
@@ -339,6 +332,49 @@
             <a class="info__link--black" href=""></a>
         </div>
     </div>
+
+
+    <div class="news">
+        <div class="news__header news-header">
+            <h3 class="news-header__title">News</h3>
+            <a href="#" class="news-header__rss-link">
+                <img class="news-header__rss-img" src="imgs/global-page/news/rss.svg" alt="RSS"/>
+            </a>
+        </div>
+
+        <!--            TODO-->
+        <div class="news__body">
+            <ul class="news__list">
+                <li class="news__item news-item">
+                    <span class="news-item__data">Jan. 12, 2024</span>
+                    <a href="#" class="news-item__link dark-link">Receives “Prime” Status in ISS ESG Corporate Rating
+                        for the First Time</a>
+                </li>
+                <li class="news__item news-item">
+                    <span class="news-item__data">Jan. 9, 2024</span>
+                    <a href="#" class="news-item__link dark-link">Capture Exhibits at CES 2024</a>
+                </li>
+                <li class="news__item news-item">
+                    <span class="news-item__data">Jan. 9, 2024</span>
+                    <a href="#" class="news-item__link dark-link">Capture and AFP collaborate to verify the
+                        implementation of an image provenance function
+                        in Capture cameras</a>
+                </li>
+                <li class="news__item news-item">
+                    <span class="news-item__data">Jan. 9, 2024</span>
+                    <a href="#" class="news-item__link dark-link">Introducing the Smart Telescopes ODYSSEY PRO and
+                        ODYSSEY</a>
+                </li>
+                <li class="news__item news-item">
+                    <span class="news-item__data">Jan. 5, 2024</span>
+                    <a href="#" class="news-item__link dark-link">Capture supports relief efforts for the 2024 Noto
+                        Peninsula Earthquake in Japan </a>
+                </li>
+            </ul>
+            <a href="#" class="news__button dark-link">See all news</a>
+        </div>
+    </div>
+
 
     <!-- to be continued -->
     <!-- to be continued -->
