--- a/business.html
+++ b/business.html
@@ -68,18 +68,18 @@
                             <h2 class="category__title">Observation & Examination (Biology)</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_lifescience.svg"
                                              alt="Biological Microscopes" class="card__photo">
                                         <h3 class="card__title">Biological Microscopes</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_eyecare.svg" alt="Fundus Camera"
                                              class="card__photo">
                                         <h3 class="card__title">Fundus Camera</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
 
@@ -88,12 +88,12 @@
                             <h2 class="category__title">Contract Cell Development and Manufacturing</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_cdmo.svg" alt="Fundus Camera"
                                              class="card__photo">
                                         <h3 class="card__title">Contract Cell Development and
                                             Manufacturing</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -105,19 +105,19 @@
                             <h2 class="category__title">Observation & Examination (Industrial)</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_x-ray.svg"
                                              alt="X-Ray and CT Systems" class="card__photo">
                                         <h3 class="card__title">X-Ray and CT Systems</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_industrial_microscopy.svg"
                                              alt="Industrial Microscopy"
                                              class="card__photo">
                                         <h3 class="card__title">Industrial Microscopy</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -129,34 +129,34 @@
                             <h2 class="category__title">Measurement</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_x-laser_radar.svg"
                                              alt="Laser Radar Measuring Systems" class="card__photo">
                                         <h3 class="card__title">Laser Radar Measuring Systems</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_optical_manual_measuring.svg"
                                              alt="Video Measuring Systems" class="card__photo">
                                         <h3 class="card__title">Video Measuring Systems</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_video_measuring_systems.svg"
                                              alt="Optical Manual Measuring"
                                              class="card__photo">
                                         <h3 class="card__title">Optical Manual Measuring</h3>
-                                    </div>
+                                    </a>
                                 </li>
 
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_digimicro.svg" alt="Digimicro"
                                              class="card__photo">
                                         <h3 class="card__title">Digimicro</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -168,18 +168,18 @@
                             <h2 class="category__title">Processing</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_processing_machine.svg"
                                              alt="Optical Processing Machine" class="card__photo">
                                         <h3 class="card__title">Optical Processing Machine</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_material_processing_solutions.svg"
                                              alt="Material Processing Solutions" class="card__photo">
                                         <h3 class="card__title">Material Processing Solutions</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -191,18 +191,18 @@
                             <h2 class="category__title">Industrial Robotics</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_encoders.svg"
                                              alt="" class="card__photo">
                                         <h3 class="card__title">Encoders</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_robot_vision.svg"
                                              alt="Robot Vision" class="card__photo">
                                         <h3 class="card__title">Robot Vision</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -214,11 +214,11 @@
                             <h2 class="category__title">Surveying</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_surveying_instruments.svg"
                                              alt="Surveying Instruments" class="card__photo">
                                         <h3 class="card__title">Surveying Instruments</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -230,39 +230,39 @@
                             <h2 class="category__title">Lithography Systems & Related Instruments</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_fpd.svg"
                                              alt="FPD Lithography Systems" class="card__photo">
                                         <h3 class="card__title">FPD Lithography Systems</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_semiconductor_systems.svg"
                                              alt="Semiconductor Systems" class="card__photo">
                                         <h3 class="card__title">Semiconductor Systems</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_mems.svg"
                                              alt="MEMS Steppers & Both Side Measurement System" class="card__photo">
                                         <h3 class="card__title">MEMS Steppers & Both Side Measurement System</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_alignment_station.svg"
                                              alt="Alignment Station" class="card__photo">
                                         <h3 class="card__title">Alignment Station</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_metrology.svg"
                                              alt="Metrology/Inspection Systems" class="card__photo">
                                         <h3 class="card__title">Metrology/Inspection Systems</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -274,18 +274,18 @@
                             <h2 class="category__title">Components & Materials</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_industrial_lenses.svg"
                                              alt="Industrial Lenses" class="card__photo">
                                         <h3 class="card__title">Industrial Lenses</h3>
-                                    </div>
+                                    </a>
                                 </li>
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_optical_components.svg"
                                              alt="Optical Components & Material" class="card__photo">
                                         <h3 class="card__title">Optical Components & Material</h3>
-                                    </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -297,11 +297,11 @@
                             <h2 class="category__title">Components & Materials</h2>
                             <ul class="category__list">
                                 <li class="category__item">
-                                    <div class="card">
+                                    <a class="card" href="/">
                                         <img src="/imgs/business/pic_product_imaging_solution.svg"
                                              alt="Imaging Solution" class="card__photo">
                                         <h3 class="card__title">Imaging Solution</h3>
-                                    </div>
+                                    </a>>
                                 </li>
                             </ul>
                         </div>
@@ -329,7 +329,7 @@
                 <h2 class="info__title">Can't find your product and service information?</h2>
                 <p class="info__text">You can also view information on products and services from each country
                     and region via the link below.</p>
-                <p class="info__link">Global Network</p>
+                <p class="info__link link-right">Global Network</p>
             </div>
             <div class="info__block info__block--center">
                 <h2 class="info__title">Inquiries about products and services</h2>
@@ -388,7 +388,7 @@
             <h2 class="featured__title">Featured</h2>
             <ul class="featured__list">
                 <li class="featured__item">
-                    <a href="/">
+                    <a class="featured__item-link" href="/">
                         <img class="featured__img" src="/imgs/business/pic_featured_ces2024.svg"
                              alt="CES 2024 Special Site">
                         <h3 class="featured__cart-title">CES 2024 Special Site</h3>
@@ -399,7 +399,7 @@
                     </p>
                 </li>
                 <li class="featured__item">
-                    <a href="/">
+                    <a class="featured__item-link" href="/">
                         <img class="featured__img" src="/imgs/business/pic_featured_eclipse_ji.svg" alt="ECLIPSE Ji">
                         <h3 class="featured__cart-title">Smart Imaging System "ECLIPSE Ji"</h3>
                     </a>
@@ -408,7 +408,7 @@
                     </p>
                 </li>
                 <li class="featured__item">
-                    <a href="/">
+                    <a class="featured__item-link" href="/">
                         <img class="featured__img" src="/imgs/business/pic_featured_ax_ax_r.svg"
                              alt="Confocal Microscope System">
                         <h3 class="featured__cart-title">AX / AX R Confocal Microscope System</h3>
@@ -419,7 +419,7 @@
                     </p>
                 </li>
                 <li class="featured__item">
-                    <a href="/">
+                    <a class="featured__item-link" href="/">
                         <img class="featured__img" src="/imgs/business/pic_featured_bioimaging_lab.svg"
                              alt="Capture BioImaging Lab">
                         <h3 class="featured__cart-title">Capture’s Contract Research Service (Capture BioImaging
@@ -432,7 +432,7 @@
                     </p>
                 </li>
                 <li class="featured__item">
-                    <a href="/">
+                    <a class="featured__item-link" href="/">
                         <img class="featured__img" src="/imgs/business/pic_featured_material_processing_solutions.svg"
                              alt="Material Processing Solutions">
                         <h3 class="featured__cart-title">Material Processing Solutions</h3>
@@ -444,7 +444,7 @@
                     </p>
                 </li>
                 <li class="featured__item">
-                    <a href="/">
+                    <a class="featured__item-link" href="/">
                         <img class="featured__img" src="/imgs/business/pic_featured_lasermeister_series.svg"
                              alt="Lasermeister Series">
                         <h3 class="featured__cart-title">Lasermeister Series</h3>
@@ -455,7 +455,7 @@
                     </p>
                 </li>
                 <li class="featured__item">
-                    <a href="/">
+                    <a class="featured__item-link" href="/">
                         <img class="featured__img" src="/imgs/business/pic_featured_nsr-2205il1.svg" alt="NSR-2205iL1">
                         <h3 class="featured__cart-title">NSR-2205iL1 5x Reduction i-line Stepper</h3>
                     </a>
